objects/Partner_KPI_Publish_History__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Published User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_KPI_Publish_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner KPI Publish History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner KPI Publish History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>